Time picker foundations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,6 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_day" />
+        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
