feat(Tema 9): Ejercicio 2: Mostrar una lista con nombre, apellido y sexo. Que cada fila sea de un color diferente dependiendo del sexo.

--- a/app/src/main/res/layout/row_element.xml
+++ b/app/src/main/res/layout/row_element.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/row"
     android:layout_height="@dimen/list_item_height"
     android:layout_margin="@dimen/margin_medium">
 
@@ -8,5 +9,21 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:text="@string/element_text"/>
-</FrameLayout>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:text="@string/element_text"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:gravity="right"
+        android:text="@string/element_text" />
+
+</LinearLayout>
