Cambios para el ejercicio tema 9

--- a/app/src/main/res/layout/row_element.xml
+++ b/app/src/main/res/layout/row_element.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fila"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
-    android:layout_margin="@dimen/margin_medium">
+    android:layout_margin="@dimen/margin_medium"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
-</FrameLayout>
+        android:text="@string/element_text" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/element_text"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotationX="-3"
+        android:text="@string/element_text"
+        android:visibility="visible"
+        tools:visibility="visible" />
+</LinearLayout>
