--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="DatePickerTheme" parent="android:Theme.Material.Light.Dialog">
-        <item name="android:colorAccent">#FFA726</item>
+        <item name="android:colorAccent">#FF4453</item>
     </style>
 </resources>
