--- a/app/src/main/res/layout/row_element.xml
+++ b/app/src/main/res/layout/row_element.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contenedorDatos"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:layout_margin="@dimen/margin_medium">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/element_text" />
+
+    <TextView
+        android:id="@+id/tvApellidos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="@string/apellidos" />
+
+    <TextView
+        android:id="@+id/tvSexo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="@string/sexo" />
+
 </FrameLayout>
