Ejercicio 2 Tema 11 - creacion de menu lateral

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.ImaginaFormacionTest.NoActionBar">
@@ -22,4 +25,5 @@
     <style name="Theme.ImaginaFormacionTest.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ImaginaFormacionTest.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
