--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,16 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_op1"
+        android:orderInCategory="100"
+        android:title="Opcion 1"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_op2"
+        android:orderInCategory="100"
+        android:title="Opcion 2"
+        app:showAsAction="never" />
 </menu>
