--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="xyz.gonzapico.imaginaformacion_test.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <group>
+        <item
+            android:id="@+id/action_settings"
+            android:orderInCategory="100"
+            android:title="@string/action_settings"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/item_uno"
+            android:orderInCategory="100"
+            android:title="Item1"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/item_dos"
+            android:orderInCategory="100"
+            android:title="Item2"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/item_tres"
+            android:orderInCategory="100"
+            android:title="Item3"
+            app:showAsAction="never" />
+    </group>
 </menu>
