--- a/app/src/main/res/layout/row_element.xml
+++ b/app/src/main/res/layout/row_element.xml
@@ -4,9 +4,22 @@
     android:layout_height="@dimen/list_item_height"
     android:layout_margin="@dimen/margin_medium">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/element_text"/>
+
+        <TextView
+            android:id="@+id/textViewsexo"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="" />
+    </LinearLayout>
 </FrameLayout>
