ejercicio 10  pedro lanseros

--- a/app/src/main/res/layout/row_element.xml
+++ b/app/src/main/res/layout/row_element.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:clickable="true"
     android:layout_height="@dimen/list_item_height"
-    android:layout_margin="@dimen/margin_medium"
-    android:focusable="true">
+    android:layout_margin="@dimen/margin_medium">
 
     <TextView
-        android:clickable="true"
-        android:focusable="true"
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
